Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_neighborhoods = set('')'neighborhoods'"
+    "unique_neighborhoods = set'neighborhoods'"
    ]
   },
   {
