Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -86,13 +86,13 @@
        "{'b', 'd', 'e', 'g', 'h', 'i', 'n', 'o', 'r', 's'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "unique_neighborhoods"
+    "niqueneighborhoods"
    ]
   },
   {
