Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -48,12 +48,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'b', 'd', 'e', 'g', 'h', 'i', 'n', 'o', 'r', 's'}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "unique_neighborhoods = set('neighborhoods')\n",
-    "unique_ne"
+    "unique_neighborhoods"
    ]
   },
   {
