Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -39,16 +39,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "neighborhoods = ['Palermo', 'Ricoleta', 'Santelmo', 'Puerto Madero', 'Belgrano', 'La Boca','La Boca', 'Santelmo']"
+    "neighborhoods = ['Palermo', b'Ricoleta', 'Santelmo', 'Puerto Madero', 'Belgrano', 'La Boca','La Boca', 'Santelmo']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "{'b', 'd', 'e', 'g', 'h', 'i', 'n', 'o', 'r', 's'}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
